--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css">
 
-  <title>Changed title!</title>
+  <link rel="stylesheet/less" type="text/css" href="less/less.style1.less">
+  <script src="node_modules/less/dist/less.min.js"></script>
+
+
+  <title>Hello, world!</title>
 </head>
 <body>
 <header>
@@ -31,6 +35,10 @@
           <li class="nav-item">
             <a class="nav-link text-light" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
                aria-selected="true">Главная</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" id="less-tab" data-toggle="tab" href="#less" role="tab"
+               aria-controls="gallery" aria-selected="false">LESS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-light" id="gallery-tab" data-toggle="tab" href="#gallery" role="tab"
@@ -125,6 +133,84 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+
+      <div class="tab-pane" id="less" role="tabpanel" aria-labelledby="less-tab">
+        <div class="wrapper">
+          <nav class="mynav">
+            <button class="mynav__theme">Change theme</button>
+            <ul class="mynav__menu">
+              <li class="mynav__item"><a href="#" class="mynav__link">Home</a></li>
+              <li class="mynav__item"><a href="#" class="mynav__link">About</a></li>
+              <li class="mynav__item"><a href="#" class="mynav__link">Items</a></li>
+              <li class="mynav__item"><a href="#" class="mynav__link">Contact</a></li>
+            </ul>
+          </nav>
+
+          <section class="main">
+            <div class="main__content">
+              <div class="main__tile--danger">
+                <div class="main__header">Product 1</div>
+                <ul class="main__features">
+                  <li class="main__item">Feature 1<span class="main__plus">+</span></li>
+                  <li class="main__item">Feature 2<span class="main__plus">+</span></li>
+                  <li class="main__item">Feature 3<span class="main__plus">+</span></li>
+                  <li class="main__item">Feature 4</li>
+                  <li class="main__item">Feature 5</li>
+                </ul>
+
+                <div class="main__footer">
+                  <button class="main__button main__button--danger">Click on me!</button>
+                </div>
+              </div>
+
+              <div class="main__tile main__tile--warning">
+                <div class="main__header">Product 2</div>
+                <ul class="main__features">
+                  <li class="main__item">Feature 1<span class="main__plus">+</span></li>
+                  <li class="main__item">Feature 2</li>
+                  <li class="main__item">Feature 3<span class="main__plus">+</span></li>
+                  <li class="main__item">Feature 4<span class="main__plus">+</span></li>
+                  <li class="main__item">Feature 5</li>
+                </ul>
+
+                <div class="main__footer">
+                  <button class="main__button main__button--warning">Click on me!</button>
+                </div>
+              </div>
+
+              <div class="main__tile main__tile--primary">
+                <div class="main__header">Product 3</div>
+                <ul class="main__features">
+                  <li class="main__item">Feature 1</li>
+                  <li class="main__item">Feature 2<span class="main__plus">+</span></li>
+                  <li class="main__item">Feature 3<span class="main__plus">+</span></li>
+                  <li class="main__item">Feature 4<span class="main__plus">+</span></li>
+                  <li class="main__item">Feature 5</li>
+                </ul>
+
+                <div class="main__footer">
+                  <button class="main__button main__button--primary">Click on me!</button>
+                </div>
+              </div>
+
+              <div class="main__tile main__tile--success">
+                <div class="main__header">Product 4</div>
+                <ul class="main__features">
+                  <li class="main__item">Feature 1<span class="main__plus">+</span></li>
+                  <li class="main__item">Feature 2</li>
+                  <li class="main__item">Feature 3</li>
+                  <li class="main__item">Feature 4<span class="main__plus">+</span></li>
+                  <li class="main__item">Feature 5<span class="main__plus">+</span></li>
+                </ul>
+
+                <div class="main__footer">
+                  <button class="main__button main__button--success">Click on me!</button>
+                </div>
+              </div>
+            </div>
+          </section>
         </div>
       </div>
 
