--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
       </div>
     </nav>
   </div>
+
+  <div class="container page-top">
+    <div class="row">
+      <div class="col">
+        <h1>Робота з GitHub</h1>
+      </div>
+    </div>
+  </div>
+
   <div class="container page-top">
     <div class="tab-content">
       <div class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab">
